# nexus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/common/: __init__.py  errors.py  json.py  logging.py  pagination.py  security.py
app/db/: __init__.py  base.py  session.py  types.py
app/modules/: __init__.py
cli/: README.md  pyproject.toml
cli/src/nexus_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  credentials.py  http.py
cli/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_credentials.py
docs/: README.md  USER_GUIDE.md
docs/adr/: 0001-modular-monolith-api-first.md  0002-memory-entries-not-sessions.md  0003-users-not-ai-tools-are-permission-actors.md  0004-postgresql-source-of-truth.md  0005-separate-context-from-visibility.md  0006-human-review-for-shared-memory.md  0007-postgresql-full-text-search-first.md  0008-no-llm-or-embeddings-in-api.md  0009-projects-owned-by-groups.md  0010-oidc-short-lived-user-sessions.md  0011-api-error-contract.md  0012-web-client-and-separate-deployments.md  0013-serverless-aws-deployment-with-cdk.md  README.md
docs/decisions/: resolved-questions.md
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: api-stack.ts  config.ts  web-stack.ts
scripts/: bootstrap_org.py  seed_dev.py
specs/: README.md
specs/api/: rest-api.md
specs/data/: schema.dbml
specs/domain/: model.md
specs/features/: api_contracts.feature  audit.feature  auth_and_sessions.feature  auth_and_tokens.feature  context_packs.feature  effective_project_roles.feature  search.feature  (+4 more)
standards/: README.md  agent-workflow.md  ai-implementation-prompt.md  ci-quality-gates.md  database-migrations.md  deployment.md  spec-driven-development.md  testing.md
tests/: conftest.py  test_admin_api.py  test_api_contracts.py  test_audit.py  test_auth_sessions.py  test_bootstrap_org.py  test_cli_authorization.py  test_config.py  test_context_pack_permissions.py  test_dev_login.py  test_error_contract.py  test_memory_creation_review.py  test_memory_permissions.py  test_oidc_login.py  test_pagination.py  test_project_effective_roles.py  test_projects_listing.py  test_search_permissions.py
web/: .cta.json  .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
(+112 files in other folders)
