[project]
name = "nexus"
version = "0.1.0"
description = "Governed shared memory API for AI-assisted teams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.29.0",
  "coverage>=7.9.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "SIM",
  "C4",
  "PIE",
  "RET",
  "ARG",
  "PTH",
  "PT",
  "S",
  "RUF",
  "DTZ",
  "T20",
  "TRY",
  "PERF",
]
ignore = [
  "TRY003",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"app/db/migrations/versions/*.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
