[project]
name = "nexus-cli"
version = "0.1.0"
description = "Command-line client for the Nexus governed shared memory API."
readme = "README.md"
requires-python = ">=3.12"
# Runtime uses only the Python standard library; no third-party dependencies.
dependencies = []

[project.scripts]
nexus = "nexus_cli.cli:main"

[dependency-groups]
dev = [
  "basedpyright>=1.29.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "PIE", "RET",
  "ARG", "PTH", "PT", "S", "RUF", "DTZ", "T20", "TRY", "PERF",
]
ignore = ["TRY003"]

[tool.ruff.lint.per-file-ignores]
# Tests assert on token-shaped literals; S101 is expected in pytest.
"tests/**/*.py" = ["S101", "S105", "S106"]
# The CLI is a user-facing terminal program; printing to stdout is intended.
"src/nexus_cli/cli.py" = ["T20"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
